--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   animated_splash_screen: ^1.1.0
   curved_navigation_bar: ^1.0.2
   fluttertoast: ^8.0.9
+  provider: ^6.0.2
+  get: ^4.6.1
   
   
   
